# investigator

./: .dockerignore  .env.example  .gitignore  .mcp.json  DATA_MODEL.md  Dockerfile  FLOW.md  LICENSE  PRODUCTIZATION.md  README.md  TRIANGULATION_REVIEW.md  docker-compose.yml  evaluate_investigator_server.py  evaluate_tangraph_server.py  metrics.py  pyproject.toml  tangraph_mcp_client.py  tangraph_server.py
cg/: AGENT_CG_GUIDE.md  FEEDBACK.md  WELCOME_MESSAGE.md  actions.json  lifecycle.json  rules.json
docker/: entrypoint.sh
docs/: CHANGELOG.md  README.md  THE_HIDDEN_THREAD.html  UI_API.md  analysis.md  architecture.md  blog.md  cep-monitoring-discussion.html  data-model.md  handoff.md  knowledge-base.md  monitoring.md  operations.md  pipeline.md  roadmap.md  sources.md  ui-api.md
docs/reviews/: triangulation-review.md
research/: README.md  analyst_report_playbook.md  blog_post_finding_threads_in_news.html  bp_synthetic_demo.py  build_analyst_report.py  build_blog_post.py  build_customer_report.py  build_fake_report.py  build_full_ui_prototype.py  build_graph_prototype.py  build_tmfg_prototype.py  claim_verify.py  cross_event_investigation.py  domain_presets.py  enhanced_retrieval.py  enrichment.py  gnews_deep_investigation.py  kg_canonicalizer.py  kg_merge_prototype.py  kg_mode_analysis.py  kg_retrieval_explore.py  osint_analyst_review.py  prototype_claim_verify.py  search_sources.py  source_ingest.py  ui_server.py
src/investigator/: __main__.py  app.py  logging.py  wsgi.py
src/investigator/analytics/: __init__.py  canonicalizer.py  client.py  cumulative_kg.py  llm.py  reranker.py  server.py  structured_store.py  worker.py
src/investigator/api/: __init__.py  routes.py  schemas.py
src/investigator/config/: __init__.py  settings.py
src/investigator/graph/: __init__.py  connector.py  corroboration.py  dedup.py  filter.py  junction_tree.py  operations.py  similarity.py  temporal_consistency.py  tmfg.py  visualize.py
src/investigator/llm/: __init__.py  signatures.py
src/investigator/monitor/: __init__.py  __main__.py  digest.py  fired.py  impact.py  intake.py  intersect.py  patterns.py  rules.py  watchlist.py
src/investigator/pipeline/: __init__.py  chunking.py  hypothesis.py  orchestrator.py  response_builder.py
src/investigator/state/: __init__.py  investigation.py  persistence.py  records.py  session.py  sqlite_persistence.py
src/investigator/utils/: __init__.py  text.py
src/tangraph/: __init__.py  __main__.py  app.py  logging.py
src/tangraph/analytics/: __init__.py  client.py  server.py  worker.py
src/tangraph/api/: __init__.py  errors.py  routes.py  schemas.py
src/tangraph/config/: __init__.py  secrets.py  settings.py
src/tangraph/graph/: __init__.py  dedup.py  filter.py  junction_tree.py  operations.py  similarity.py  tmfg.py
src/tangraph/llm/: __init__.py  models.py  signatures.py
src/tangraph/pipeline/: __init__.py  orchestrator.py  response_builder.py
src/tangraph/state/: __init__.py  ids.py  investigation.py  records.py  session.py
src/tangraph/utils/: __init__.py  text.py
tests/: __init__.py  test_build_graph.py  test_build_payload_fallback.py  test_canonical_validation.py  test_causal_claims.py  test_cep_state.py  test_claim_corroboration.py  test_connector.py  test_cumulative_kg.py  test_edge_filter.py  test_event_dedup.py  test_junction_tree.py  test_merge_and_relations.py  test_monitor.py  test_patterns.py  test_picker_headline_filter.py  test_records.py  test_register_edges.py  test_resolve_root.py  test_response_builder.py  test_stage1_ner.py  test_stage2_dedup.py  test_stage4_consolidator.py  test_stage4_prob.py  test_stage4_score.py  test_state.py  test_structured_store.py  test_temporal_asof.py  test_temporal_consistency.py  test_tmfg.py
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  server.py  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/components/: AdvancedSettings.svelte  AppShell.svelte  ClaimVerify.svelte  Connections.svelte  InvestigationList.svelte  InvestigationView.svelte  KnowledgeBase.svelte  Monitor.svelte  NewInvestigation.svelte  Placeholder.svelte  ProgressPanel.svelte  Settings.svelte  VerdictPanel.svelte
ui/src/components/tabs/: ClaimVerdict.svelte  Data.svelte  Graph.svelte  Help.svelte  KeyNetwork.svelte  Overview.svelte  Report.svelte  Sources.svelte  Tmfg.svelte
ui/src/lib/: api.ts  colors.ts  cytoscape.ts  helpers.ts  router.svelte.ts  store.svelte.ts  types.ts
