[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investigator"
version = "1.0.0"
description = "Triangulation Graph Server — entity/edge/evidence extraction for compliance & OSINT investigations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dsivov", email = "dsivov@gmail.com" }]

dependencies = [
    # Web framework & HTTP
    "flask[async]",  # async extra (asgiref) required for the async def route
    "httpx",
    "requests",
    "aiohttp",
    "python-dotenv",
    "toml",

    # LLM orchestration & schema
    "dspy>=3.0.4",
    "pydantic",
    "openai>=2.9.0",
    "litellm>=1.80.7",

    # Embeddings / dedup / chunking
    "model2vec",
    "wordllama>=0.4",  # 0.4 adds WordLlama.load_m2v (used by the dedup layer); older versions crash
    "semhash",
    "vicinity",
    "langchain-text-splitters",

    # Similarity / fuzzy-match helpers used by the graph + dedup code.
    "sentence-transformers",
    "python-Levenshtein",

    # News fetch & document parsing (Stage 1 fetch layer + PDF sources)
    "gnews",
    "newspaper3k",
    "googlenewsdecoder",
    "pymupdf",
    "lxml_html_clean",  # newspaper3k needs lxml.html.clean, split out of lxml>=5

    # Graph & analysis
    "networkx",
    "pyvis",
    "pydot",
    "matplotlib",
    "scipy",
    "pandas",
    "numpy>=2",  # wordllama>=0.4 requires numpy 2.x; pin the floor to avoid an ABI split

    # Storage
    "coffy",

    # Analytics sub-package (lightrag-hku ships its own FastAPI server & client)
    # Pinned <1.5: 1.5.x drops lightrag.constants.DEFAULT_HISTORY_TURNS, which
    # investigator.config.settings imports (breaks startup).
    "lightrag-hku[api]>=1.4,<1.5",
    "fastapi",
    "uvicorn",
    "gunicorn",  # production WSGI serving (investigator.wsgi / ui.server)
    "ascii-colors",
    "nltk",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyflakes",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
investigator = "investigator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/investigator"]

# --- Tooling configuration -------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
# Conservative ruleset for a freshly-split codebase. Tighten in Phase 2/3.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "B",   # flake8-bugbear (common pitfalls)
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-too-long: not enforcing during refactor
    "B008",  # function call in default arg (FastAPI/Flask idiom)
]

[tool.ruff.lint.per-file-ignores]
"src/investigator/analytics/*" = ["F", "E", "B", "UP", "I"]  # relocated as-is; cleanup in Phase 2
"src/investigator/config/settings.py" = ["I"]  # verbatim move from config.py; reorder deferred to Phase 2

[tool.ruff.lint.isort]
known-first-party = ["investigator"]
